--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,1 @@
-@import './components/chat.css';
-
-:root {
-  --background-tertiary: #333333;
-}
-
-.text{ 
-  color: wheat;
-}
+@import './modules/font.css';
