--- a/src/modules/font.css
+++ b/src/modules/font.css
@@ -1,5 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@200;400;700&display=swap');
 
-*{
-  font-family: "Athiti", sans-serif !important;
+:root{
+  --font-primary: "Athiti", sans-serif;
+  --font-code: "Athiti"
+}
+
+.overflow__87fe8{
+  font-family: var(--font-primary);
+}
+
+.nonMediaAttachmentsContainer_ca7b77{
+  font-weight: 200;
+  font-style: italic;
 }
